ghc-4335c07/testsuite/tests/overloadedlists/should_run/overloadedlistsrun01.hs
{-# LANGUAGE OverloadedLists #-}

main = do print ([] :: [Int])
          print ([1,2,3] :: [Int])
          print ((take 10 [1..]) :: [Int])
          print (['a'..'e'] :: [Char])
