ghc-4335c07/testsuite/tests/overloadedlists/should_fail/overloadedlistsfail04.hs
{-# LANGUAGE OverloadedLists #-}

main = print (["a".."b"] :: [String])
